Fix form alignment issue

--- a/assets/static/css/styles.css
+++ b/assets/static/css/styles.css
@@ -38,7 +38,6 @@ ul#strength {
     margin:0;
     margin-left:15px;
     padding:0;
-    vertical-align:2px;
 }
 .point:last {
     margin:0 !important;
